# so101-lab

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  activate_isaaclab.sh  activate_lerobot.sh  pyproject.toml
assets/props/: deep_blue_hexagon.usd  deep_green_star.usd  full_game.usd  light_blue_cube.usd  light_green_triangle_prism.usd  orange_x.usd  pink_diamond.usd  platfrom_full.usd  red_clover.usd  workbench.usd  yellow_cylinder.usd  yellow_parallelepiped.usd
assets/scenes/: workbench_table_only.usd  workbench_v1.usd
configs/: collect_rollouts.yaml
docs/: README.md  architecture.md  attribution.md  guide.md  troubleshooting.md
docs/diagrams/: pipeline.excalidraw  ppo_grpc_training.excalidraw  record_episodes.excalidraw  record_episodes_v1.excalidraw
docs/reference/: collect_rollouts.md  critics.md  env_design.md  eval_act_policy.md  eval_vla_policy.md  experiment_tracking.md  filter_dataset.md  flow_noise_smolvla.md  index.md  isaac_lab_gym_env.md  isaac_sim_standalone.md  lerobot_dataset.md  neural_ik.md  performance_tuning.md  physics_tuning.md  prepare_reward_dataset.md  record_episodes.md  replay_dataset.md  reward_classifier.md  scripts.md  sim2real.md  structure.md  (+13 more)
scripts/: calibrate_leader.py  convert_usd.py  test_robot.py  verify_lerobot_dataset.py  visualize_lerobot_rerun.py
so101_lab/: __init__.py
tests/: README.md  test_backward_compatibility_gui.py  test_device_gui.py  test_gamepad.py  test_keyboard_device.py  test_lerobot_v3_writer.py  test_motor_bus.py  test_teleop_integration.py  test_teleop_mode_gui.py
venvs/: README.md
(+184 files in other folders)
